--- a/MvcChallenge2016/MvcChallenge2016/MvcChallenge2016.csproj
+++ b/MvcChallenge2016/MvcChallenge2016/MvcChallenge2016.csproj
@@ -140,17 +140,26 @@
     <Content Include="Schema\LibrarySchema.edmx.diagram">
       <DependentUpon>LibrarySchema.edmx</DependentUpon>
     </Content>
-    <None Include="Schema\LibrarySchema.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.validate.js" />
+    <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Books\Index.cshtml" />
+    <Content Include="Views\Web.config" />
+    <Content Include="Views\Default\Index.cshtml" />
+    <Content Include="Views\Default\Edit.cshtml" />
+    <Content Include="Views\Default\Add.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -167,12 +176,14 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\BooksController.cs" />
+    <Compile Include="Controllers\DefaultController.cs" />
     <Compile Include="DataAccessLayer\Book.cs" />
     <Compile Include="DataAccessLayer\LibraryContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\BookEditModel.cs" />
+    <Compile Include="Models\BookListModel.cs" />
     <Compile Include="Models\BookModel.cs" />
     <Compile Include="Models\IInitializable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -196,7 +207,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Views\Books\" />
     <Folder Include="Views\Book\" />
   </ItemGroup>
   <ItemGroup>
